# CCO

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PITCH_GUIDE.txt  README.md  baseline_inference.py  build_agent.py  openenv.yaml  production_traffic.json  pyproject.toml  requirements.txt  validate.py
.github/workflows/: ci.yml
agent/: __init__.py  baselines.py  deploy.py  evaluate.py  registry.py  train.py
configs/: config.yaml
dashboard/: app.py
env/: __init__.py  environment.py  models.py  real_traffic_generator.py  server_model.py  traffic_generator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  engine.js  index.css
scripts/: ingress_server.py  metrics_example.py  run_simulation.py
static/: tracker.js
tasks/: __init__.py  graders.py  task_chaos.yaml  task_spike.yaml  task_steady.yaml
tests/: test_agents.py  test_environment.py  test_evaluation.py  test_registry.py  test_training.py  test_utils.py
utils/: __init__.py  ingress.py  reward.py
